[package]
name = "cargo_cmake_conan"
version = "0.1.0"
authors = ["Daniel <nerull@craftsoft.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
cmake = "0.1"
conan = "0.1"